--- a/index.html
+++ b/index.html
@@ -100,39 +100,15 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About This Project</h2>
-                    <h3 class="section-subheading text-muted">ChattyCity was designed and developed as a project to store, retrieve, visualize, and communicate data.<br />Our project concept was to look at tweet sentiment (a general feeling or emotion, usually broken down as positive, negative, or neutral) based on tweeter's location (source) and where they are tweeting about (destination). We hypothesized that there is a bias for or against certain cities based on where the tweeter is from. For example, most residents in Seattle might have a positive sentiment about San Francisco, but residents of Los Angeles might generally have a negative sentiment toward San Francisco.<br />We wanted to create an interface to allow a user to search our collection of tweets and to be able to answer questions from our data such as “which cities have positive sentiment toward San Francisco?” and “Does time of day and/or day of week influence sentiment?”.<br /><br /></h3>
+                    <!--<h3 class="section-subheading text-muted"></h3>-->
                 </div>
             </div>
             
-            <!--<div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Project Concept</h4>
-                    <p class="text-muted">With a list of 100 major US cities, look at what cities talk about each other (including themselves) and whether it is positive or negative. We could also look at whether the sentiment changes based on day of week, time of day, weather, sports, or major events.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-check fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Project Goals</h4>
-                    <p class="text-muted">To show an overview of interesting findings from our exploration of the data and to allow the user to explore the data in detail to their own liking by filtering by city (or state or region perhaps), type of weather, positive or negative sentiment, etc.</p><br /><br />
-                </div>-
-                <div class="col-md-4">
-
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Project Concept</h4>
-                    <p class="text-muted">We recorded what 100 major US cities said about each other over a span of 3 weeks on Twitter. Below you can find an overview of interesting findings from our exploration of this data.</p>
-                </div>
-            </div>-->
+            <div class="row text-center">
+                <br />
+                <p class="text-muted"><br />ChattyCity was designed and developed as a project to store, retrieve, visualize, and communicate data.<br />Our project concept was to look at tweet sentiment (a general feeling or emotion, usually broken down as positive, negative, or neutral) based on tweeter's location (source) and where they are tweeting about (destination). We hypothesized that there is a bias for or against certain cities based on where the tweeter is from. For example, most residents in Seattle might have a positive sentiment about San Francisco, but residents of Los Angeles might generally have a negative sentiment toward San Francisco.<br />We wanted to create an interface to allow a user to search our collection of tweets and to be able to answer questions from our data such as “which cities have positive sentiment toward San Francisco?” and “Does time of day and/or day of week influence sentiment?”.<br /><br /></p>
+                <br />
+            </div>
             
             <div class="row text-center">
                 <div class="col-md-4">
