text edit of about section

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                 </div>
             </div>
             
-            <div class="row text-right">
+            <div class="row text-left">
                 <br />
-                <p class="text-muted">ChattyCity was designed and developed as a project to store, retrieve, visualize, and communicate data. Our project concept was to look at tweet sentiment (a general feeling or emotion, usually broken down as positive, negative, or neutral) based on tweeter's location (source) and where they are tweeting about (destination). We hypothesized that there is a bias for or against certain cities based on where the tweeter is from. For example, most residents in Seattle might have a positive sentiment about San Francisco, but residents of Los Angeles might generally have a negative sentiment toward San Francisco. Our project goals were to be able to answer questions from our data such as “which cities have positive sentiment toward San Francisco?” and “Does time of day and/or day of week influence sentiment?” as well as to create an interface to allow a user to search our collection of tweets.<br /><br /></p>
+                <p class="text-muted">ChattyCity was designed and developed as a project to store, retrieve, visualize, and communicate data. Our project concept was to look at tweet sentiment (a general feeling or emotion, usually broken down as positive, negative, or neutral) based on tweeter's location (source) and where they are tweeting about (destination). We hypothesized that there is a bias for or against certain cities based on where the tweeter is from. For example, most residents in Seattle might have a positive sentiment about San Francisco, but residents of Los Angeles might generally have a negative sentiment toward San Francisco. Our project goals were to be able to answer questions from our data such as “which cities have positive sentiment toward San Francisco?” and to create an interface to allow a user to search our collection of tweets.<br /><br /></p>
                 <br />
             </div>
             
