--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Project Concept</h4>
-                    <p class="text-muted">We recorded what 100 major US cities said about each other over a span of 3 weeks on Twitter, analyzed the sentiment of each tweet, and created visuals of the data.</p>
+                    <p class="text-muted">We recorded what 100 major US cities said about each other over a span of 3 weeks on Twitter, visualized the data, and created a search interface.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
