--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </div>
             <div class="row text-center">
                 <br />
-                <p class="text-muted"><br />For a more detailed description of the project, the tools used, and the source code, please visit our <a href="https://github.com/dmilad/dmilad.github.io">Github</a> page.</p>
+                <p class="text-muted"><br />For a more detailed description of the project, the tools used, and the source code, please visit our <a href="https://github.com/chattycity/chattycity.github.io">Github</a> page.</p>
                 <br />
             </div>
         </div>
